unpackaged/main/default/objects/litify_time__lit_Time_Related_Object__c/litify_time__lit_Time_Related_Object__c.object-meta.xml
<CustomObject>
    <description>Used to configure Litify Time Tracking. PLEASE ONLY CONFIGURE THROUGH TIME TRACKING ADMIN SETTINGS.</description>
    <label>Time Related Object</label>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Related Objects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>