unpackaged/main/default/objects/litify_time__lit_Time_Related_Object__c/fields/litify_time__lit_Display_Field_1__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Display_Field_1__c</fullName>
    <label>Display Field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>