unpackaged/main/default/objects/litify_time__lit_Time_Related_Object__c/fields/litify_time__lit_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time Entry</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>