unpackaged/main/default/objects/litify_time__lit_Time_Related_Object__c/fields/litify_time__lit_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>