unpackaged/main/default/objects/litify_time__lit_Time_Related_Object__c/fields/litify_time__lit_Time_Entry_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Time_Entry_Lookup_Field__c</fullName>
    <description>Stores the api name of a lookup field on the Time Entry or Cost object that looks up to a configured object.</description>
    <label>Lookup Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>